fix: serve local COS mock files
